// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolTip snapshots Renders a gene properly 1`] = `
.c8 {
  border: 1px solid #e5e5e5;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  width: 80px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  cursor: pointer;
}

.c8:hover {
  border-color: black;
  background: black;
  color: white;
}

.c6 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
  padding-bottom: 10px;
}

.c6 p,
.c6 p:first-child:first-letter {
  margin: 0;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
}

.c10 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 10px;
  line-height: 1.4em;
  color: #cccccc;
}

.c10 a {
  color: #cccccc;
  border-bottom: 1px solid #e5e5e5;
  line-height: 1em;
}

.c2 {
  width: 240px;
}

.c2 a:hover {
  color: black;
}

.c3 {
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  padding-bottom: 10px;
}

.c5 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 1.4em;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
  padding-bottom: 10px;
}

.c4 {
  width: 100%;
  padding-bottom: 10px;
  max-height: 160px;
  object-fit: cover;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: calc(100% + 10px);
}

.c1 {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
  padding: 20px;
  background: white;
  margin-bottom: 15px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 a {
  background-image: none;
}

.c1 .Arrow__ArrowContainer-ahn4xm-0 {
  left: calc(50% - 15px);
  bottom: -15px;
}

<div
  className="c0"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  orientation={undefined}
>
  <div
    className="c1"
    orientation={undefined}
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        href="https://www.artsy.net/gene/capitalist-realism"
        onClick={[Function]}
        target="_blank"
      >
        <img
          className="c4"
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&width=240&height=160&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FKX6a5mdTJd5cVrqCC-yb9A%2Fthumb.jpg"
        />
        <div
          className="c5"
        >
          Capitalist Realism
        </div>
        <div
          className="c6"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span><span><em>“Capitalist Realism was another form of provocation. This term somehow attacked both sides: It made Socialist Realism look ridiculous, and did the same to the possibility of Capitalist Realism as well.” —Gerhard Richter</em>Capitalist Realism was launched in 1963 in Germany by the artists Gerhard Richter, Sigmar Polke, and Konrad Lueg (later to become the dealer Konrad Fischer) not as a movement, but rather as a send-up. Its most iconic expression was a performance titled “Living with Pop – A Demonstration for Capitalist Realism,” orchestrated by Richter and Lueg in the Berges department store in Dusseldorf that same year. The artists invited patrons to come view “what is hailed in America as the greatest breakthrough in art since Cubism,” as an advertisement for the event proclaimed. Puzzled visitors arrived to find the artists making themselves at home in a staged and decidedly average living room (Richter was reading a mystery novel). Of course Capitalist Realism had no such reputation in the U.S.; the artists were parodying the overnight ascendance of Pop Art, with its celebrity culture and embrace of everyday commodities, as well as the German craze for all things American. Against the backdrop of the Cold War and a divided Germany, the fake movement’s title also alluded to the Soviet doctrine of Socialist Realism. The concerns of so-called Capitalist Realism—heavy-handed irony, investigation of the political aspects of consumerism, and critique of popular culture—have been seen by some as predecessors to a German strain of Pop Art, though the existence thereof is, itself, debatable.</span></span>",
              }
            }
          />
        </div>
      </a>
      <div
        className="c7"
      >
        <div
          className="c8"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          Follow
        </div>
        <div
          className="c9 c10"
        >
          <span>
            This is a new feature. 
          </span>
          <a
            href="mailto:productfeedback@artsy.net?subject=Feedback on 'Article Tooltips'"
            target="_blank"
          >
            Tell us what you think.
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolTip snapshots Renders an artist properly 1`] = `
.c9 {
  border: 1px solid #e5e5e5;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  width: 80px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  cursor: pointer;
}

.c9:hover {
  border-color: black;
  background: black;
  color: white;
}

.c10 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
  padding-bottom: 10px;
}

.c10 p,
.c10 p:first-child:first-letter {
  margin: 0;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
}

.c11 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 10px;
  line-height: 1.4em;
  color: #cccccc;
}

.c11 a {
  color: #cccccc;
  border-bottom: 1px solid #e5e5e5;
  line-height: 1em;
}

.c2 {
  width: 320px;
}

.c3 {
  position: relative;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
}

.c3 a:hover {
  color: black;
}

.c3 .MarketDataSummary__MarketDataSummaryContainer-vkk0cf-0 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  padding-bottom: 10px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 10px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 1.4em;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
}

.c8 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c4 {
  width: 100%;
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 div:first-child {
  margin-right: 15px;
}

.c4 img {
  width: 100%;
  height: auto;
}

.c0 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: calc(100% + 10px);
}

.c1 {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
  padding: 20px;
  background: white;
  margin-bottom: 15px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 a {
  background-image: none;
}

.c1 .Arrow__ArrowContainer-ahn4xm-0 {
  left: calc(50% - 15px);
  bottom: -15px;
}

<div
  className="c0"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  orientation={undefined}
>
  <div
    className="c1"
    orientation={undefined}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <a
          className="c4"
          href="/artist/nick-mauss"
          onClick={[Function]}
        >
          <div>
            <img
              src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=152&height=200&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FeYGNRMFqIirK-962fSOAsw%2Flarge.jpg"
            />
          </div>
          <div>
            <img
              src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=258&height=200&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F_lnI3nNFEo6D9TFqm2oM1w%2Flarge.jpg"
            />
          </div>
        </a>
        <div
          className="c5"
        >
          <a
            className="c6"
            href="/artist/nick-mauss"
            onClick={[Function]}
            target="_blank"
          >
            <div
              className="c7"
            >
              Nick Mauss
            </div>
            <div
              className="c8"
            >
              American, b. 1980
            </div>
          </a>
          <div
            className="c9"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            Follow
          </div>
        </div>
        <a
          href="/artist/nick-mauss"
          onClick={[Function]}
          target="_blank"
        >
          <div
            className="c10"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<span><span>Nick Mauss makes drawings, prints, and paintings that often take on sculptural presence in their presentation; his 2012 large-scale series of silkscreen prints on aluminum sheeting were propped against the wall, folded to stand upright, or rolled up on the ground, revealing only parts of the printed image. Mauss creates his works using a variety of materials, including ceramic tablets, glaze, ink, acrylic, wooden panels, paper, and velvet appliqué, in the case of his 2012 Whitney Biennial installation. He also uses a range of techniques to apply marks and color, including rubbing, rasping, stenciling, and scraping, in addition to silkscreening and printing. His works have a common interest in the presentation of memory and repetition.</span></span>",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="c11"
      >
        <span>
          This is a new feature. 
        </span>
        <a
          href="mailto:productfeedback@artsy.net?subject=Feedback on 'Article Tooltips'"
          target="_blank"
        >
          Tell us what you think.
        </a>
      </div>
    </div>
  </div>
</div>
`;
